# albumentations.ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Makefile  README.md  _add_company_form.html  _base.html  base.html  black.toml  contact_us.html  docker-compose.yml  index.html  index.txt  package-lock.json  people.html  people.txt  pyproject.toml  sitemap.xml  submit_success.html  team.html  testimonials.html  testimonials.txt  whos_using.html
docs/: 404.html  Dockerfile  entrypoint.sh  index.html  objects.inv  pyproject.toml  requirements.in  requirements.txt  sitemap.xml
docs/CONTRIBUTING/: index.html
docs/api_reference/: index.html
docs/api_reference/augmentations/: index.html
docs/api_reference/core/: index.html
docs/api_reference/full_reference/: index.html
docs/api_reference/imgaug/: index.html
docs/api_reference/pytorch/: index.html
docs/autoalbument/: index.html
docs/autoalbument/benchmarks/: index.html
docs/autoalbument/custom_model/: index.html
docs/autoalbument/docker/: index.html
docs/benchmarking_results/: index.html
docs/blog_posts_podcasts_talks/: index.html
docs/books/: index.html
docs/contributing/: index.html
docs/css/: extra.css
docs/examples/: example_d4.ipynb  index.html
docs/faq/: index.html
docs/frameworks_and_libraries/: index.html
docs/integrations/: index.html
docs/js/: extra.js
docs/release_notes/: index.html
docs/scripts/: build.sh  download_notebooks.sh  serve.sh  setup.sh
docs/search/: search_index.json
docs/src/: hooks.py  mkdocs.yml
docs/src/docs/: .pages  faq.md  (+3 more)
(+449 files in other folders)
